Fixed layout issues with tile and button row.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,7 +148,7 @@ game-tile-panel{
 
 game-tile-panel img {
     box-sizing: border-box;
-    width: 20%;
+  
     max-width: 200px;
     padding: 1.5em;
 }
@@ -158,10 +158,10 @@ game-tile-panel img {
     width: 150px;
     height: 150px;
     font-size: xxx-large;
-    border-radius: 50%;
-    margin-right: 10%;
     background-color: var(--international-orange-engineering);
     color: var(--linen);
+    grid-column: 2;
+    grid-row: 4;
 }
 
 .fa-play{
@@ -169,16 +169,13 @@ game-tile-panel img {
     
 }
 
-button-row {
-    width: var(--button-row-width);
-    align-items: baseline;
-    justify-content: flex-end;
-    grid-row: 4;
-    grid-column: 2/5;
-}
+
 
 settings-panel {
     font-size: xx-large;
+    grid-column: 4;
+    grid-row: 4;
+    align-items: center;
 }
 
 /* Style the switch */
@@ -208,18 +205,26 @@ width: 50px;
     game-area {
         margin-top: 1em;
     }
+
+    #play-button {
+        height: 100px;
+        width: 100px;
+        
+    }
 }
 
 /* Media query for a mobile screen */
-@media only screen and (max-width: 425px) {
-    /* 
+@media only screen and (max-width: 320px) {
+   
     h1 {
-        font-size: 48px;
+        font-size: 36px;
         margin-bottom: 2em;
+        grid-column: 1;
+        grid-row: 1;
     }
 
     game-area {
-        grid-template-columns: auto auto;
+        grid-template-columns: auto;
         grid-template-rows: auto auto auto auto auto;
     }
 
@@ -230,19 +235,24 @@ width: 50px;
     }
 
     score-card {
-        grid-row: 3;
-        grid-column: 1/3;
+        grid-row: 4;
+        grid-column: 1
     }
 
     computer-card {
-        grid-row: 2;
+        grid-row: 3;
         grid-column: 1;
 
     }
 
+    game-tile-panel {
+        grid-column: 1;
+        grid-row: 5;
+    }
     button-row {
+        grid-row: 6;
         flex-direction: column;
     }
- */
+ 
     
 }
